# mathematics-for-game-engine-development

./: .gitignore  Daily_Practice.md  README.md  README_Randomizer.md  TODO.md  randomizer.py
.claude/: settings.local.json.tmp.46131.78d5043eb656
01_Concepts/01_Systems_of_Equations/: 01_Linear_Systems.md
01_Concepts/02_Vectors/: 01_Basics.md  02_Dot_Product.md  03_Coordinate_Systems.md  03_Cross_Product.md  04_Cross_Product.md  04_Scalar_Triple_Product.md  05_Scalar_Triple_Product.md  05_Vector_Projection.md  06_Vector_Projection.md
01_Concepts/03_Matrices/: 01_Basics.md  02_Matrix_Multiplication.md  03_Determinants.md  04_Matrix_Inversion.md  05_Orthogonal_Matrices.md  06_Projection_Matrices.md  07_Rank_Nullity.md
01_Concepts/04_Transforms/: 01_Transformation_Matrices.md  02_Rotations.md  03_Reflections.md  04_Scales.md  05_Skews.md  06_Translations.md  07_Homogeneous_Coordinates.md  08_Matrix_Composition_4x4.md  08_Perspective_Projection.md  09_Quaternion_Intuition.md  09a_Stereographic_Projection_Derivation.md  10_Quaternions.md
01_Concepts/05_Geometry/: 01_Triangle_Meshes.md  02_Normal_Vectors.md  03_Lines_and_Rays.md  04_Planes.md  05_Distance_Point_and_Plane.md  06_Reflection_Through_Plane.md  07_Intersection_Line_and_Plane.md  08_Intersection_Three_Planes.md  09_Intersection_Two_Planes.md  10_Transforming_Planes.md
02_Exercises/01_Systems_of_Equations/Questions/: Q_01_Linear_Systems.md  Q_Systems_Ranks.md
02_Exercises/01_Systems_of_Equations/Solutions/: S_01_Linear_Systems.md
02_Exercises/02_Vectors/Questions/: Q_02_Dot_Product.md  Q_04_Cross_Product.md  Q_05_Scalar_Triple_Product.md  Q_06_Projection_Matrix.md  Q_06_Projection_Orthogonality.md  Q_06_Projection_Properties.md  Q_06_Vector_Projection.md  Q_Angle_Dot_Product.md  Q_Cross_Product_Triangle.md  Q_Projection_Matrix.md  Q_Projection_Orthogonality.md  Q_Projection_Properties.md  Q_Scalar_Triple_Product.md  Q_Vector_Projection.md
02_Exercises/02_Vectors/Solutions/: S_02_Dot_Product.md  S_04_Cross_Product.md  S_05_Scalar_Triple_Product.md  S_06_Projection_Matrix.md  S_06_Projection_Orthogonality.md  S_06_Projection_Properties.md  S_06_Vector_Projection.md  S_Angle_Dot_Product.md  S_Cross_Product_Triangle.md  S_Projection_Matrix.md  S_Projection_Orthogonality.md  S_Projection_Properties.md  S_Scalar_Triple_Product.md  S_Vector_Projection.md
02_Exercises/03_Matrices/Questions/: Q_02_Matrix_Multiplication.md  Q_03_Determinants.md  Q_04_Gauss_Jordan_3x3.md  Q_04_Matrix_Inversion_2x2.md  Q_06_Projection_Matrix.md  Q_Gauss_Jordan_3x3.md  Q_Matrix_Inversion_2x2.md  Q_Matrix_Properties.md  Q_Matrix_Transformations.md
02_Exercises/03_Matrices/Solutions/: S_02_Matrix_Multiplication.md  S_03_Determinants.md  S_04_Gauss_Jordan_3x3.md  S_04_Matrix_Inversion_2x2.md  S_06_Projection_Matrix.md  S_Gauss_Jordan_3x3.md  S_Matrix_Inversion_2x2.md
02_Exercises/04_Transforms/Questions/: Q_01_Transformation_Matrices.md  Q_02_Rotations.md  Q_03_Reflections.md  Q_04_Scales.md  Q_05_Skews.md  Q_06_Translations.md  Q_07_Homogeneous_Coordinates.md  Q_08_Matrix_Composition_4x4.md  Q_09_Quaternion_Intuition.md  Q_10_Quaternions.md  Q_Homogeneous_Coordinates.md  Q_Orthogonal_Transforms.md  Q_Reflections.md  Q_Rotations.md  Q_Scales.md  Q_Skews.md
02_Exercises/04_Transforms/Solutions/: S_01_Transformation_Matrices.md  S_02_Rotations.md  S_03_Reflections.md  S_04_Scales.md  S_05_Skews.md  S_06_Translations.md  S_07_Homogeneous_Coordinates.md  S_08_Matrix_Composition_4x4.md  S_09_Quaternion_Intuition.md  S_10_Quaternions.md  S_Orthogonal_Transforms.md  S_Reflections.md  S_Rotations.md  S_Scales.md  S_Skews.md
02_Exercises/05_Geometry/Questions/: Q_01_Triangle_Meshes.md  Q_02_Normal_Vectors.md  Q_03_Lines_and_Rays.md  Q_04_Planes.md
02_Exercises/05_Geometry/Solutions/: S_01_Triangle_Meshes.md  S_02_Normal_Vectors.md  S_03_Lines_and_Rays.md  (+1 more)
03_Code/: CMakeLists.txt  linear_algebra.cppm  main.cpp
03_Code/00_Utils/: util.cppm
03_Code/01_Systems_of_Equations/: 01_Linear_Systems.cpp  01_Linear_Systems.cppm
03_Code/02_Vectors/: 01_Basics.cpp  01_Basics.cppm  02_Dot_Product.cpp  02_Dot_Product.cppm  03_Coordinate_Systems.cpp  04_Cross_Product.cpp  05_Scalar_Triple_Product.cpp  06_Vector_Projection.cpp  06_Vector_Projection.cppm  Basics.cppm  Coordinate_Systems.cppm  Cross_Product.cppm  Dot_Product.cppm  Scalar_Triple_Product.cppm  Vector_Projection.cppm
03_Code/03_Matrices/: 01_Basics.cpp  01_Basics.cppm  02_Matrix_Multiplication.cpp  02_Matrix_Multiplication.cppm  03_Determinants.cpp  03_Determinants.cppm  04_Matrix_Inversion.cpp  04_Matrix_Inversion.cppm  05_Orthogonal_Matrices.cpp  05_Orthogonal_Matrices.cppm  06_Projection_Matrices.cppm  Basics.cppm  Determinants.cppm  Matrix_Inversion.cppm  Matrix_Multiplication.cppm  Orthogonal_Matrices.cppm
03_Code/04_Transforms/: 01_Transformation_Matrices.cpp  01_Transformation_Matrices.cppm  02_Rotations.cpp  02_Rotations.cppm  03_Reflections.cpp  03_Reflections.cppm  04_Scales.cpp  04_Scales.cppm  05_Skews.cppm  06_Translations.cppm  10_Quaternions.cppm  Quaternions.cppm  Rotations.cppm  Scales.cppm  Skews.cppm  Translations.cppm
03_Code/05_Geometry/: Distance_Point_and_Plane.cppm  Intersection_Line_and_Plane.cppm  Intersection_Three_Planes.cppm  Intersection_Two_Planes.cppm  Lines_and_Rays.cppm  Normal_Vectors.cppm  Planes.cppm  Reflection_Through_Plane.cppm  Transforming_Planes.cppm  Triangle_Meshes.cppm
03_Code/tests/: CMakeLists.txt
03_Code/tests/Geometry/: Normal_Vectors_tests.cpp  Triangle_Meshes_tests.cpp
03_Code/tests/Matrices/: Basics_tests.cpp  Determinants_tests.cpp  Inversion_tests.cpp  Multiplication_tests.cpp  Orthogonal_tests.cpp
03_Code/tests/Systems_of_Equations/: Linear_Systems_tests.cpp
03_Code/tests/Transforms/: Quaternions_tests.cpp  Reflections_tests.cpp  Rotations_tests.cpp  Scales_tests.cpp  Skews_tests.cpp  Translations_tests.cpp
03_Code/tests/Vectors/: Basics_tests.cpp  Coordinate_Systems_tests.cpp  Cross_Product_tests.cpp  Dot_Product_tests.cpp  Vector_Projection_tests.cpp
99_Templates/: Template_Question.md  Template_Solution.md
(+16 files in other folders)
